Introduces a feedback widget

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -24,6 +24,7 @@
 @import "components/header";
 @import "components/sidebar";
 @import "components/layout/blog";
+@import "components/feedback-form";
 @import "components/layout/gap";
 @import "components/layout/helm";
 @import "components/layout/line";
