--- a/app/styles/components/feedback-form.scss
+++ b/app/styles/components/feedback-form.scss
@@ -25,7 +25,7 @@
 }
 
 .feedback-form {
-    background-color:var(--back-color);
+    background-color: #101116;
     padding: 20px;
     margin-top: 25px;
     width: 340px;
@@ -49,10 +49,12 @@
             margin:0 0 20px 0;
             border-radius:16px;
             color:var(--text-color);
-            background-color:var(--input-color);
             -webkit-appearance: none;
              -moz-appearance: none;
              appearance: none;
+             border: none;
+             background: var(--input-color) url("data:image/svg+xml;utf8,<svg viewBox='0 0 140 140' width='20' height='20' xmlns='http://www.w3.org/2000/svg'><g><path d='m121.3,34.6c-1.6-1.6-4.2-1.6-5.8,0l-51,51.1-51.1-51.1c-1.6-1.6-4.2-1.6-5.8,0-1.6,1.6-1.6,4.2 0,5.8l53.9,53.9c0.8,0.8 1.8,1.2 2.9,1.2 1,0 2.1-0.4 2.9-1.2l53.9-53.9c1.7-1.6 1.7-4.2 0.1-5.8z' fill='white'/></g></svg>") no-repeat;
+             background-position: right 10px top 50%;
         }
 
         select:after {
