--- a/app/styles/components/sidebar.scss
+++ b/app/styles/components/sidebar.scss
@@ -66,7 +66,7 @@ sidebar {
 					overflow:auto;
 					position:absolute;
 					flex-direction:column;
-					padding:50px 30px 50px 30px;
+					padding:50px 30px 130px 30px;
 				}
 
 				&:nth-of-type(2) {
@@ -80,6 +80,8 @@ sidebar {
 					align-items:center;
 					justify-content:center;
 					background:var(--back-color);
+					box-shadow:0 -20px 30px var(--sidebar-color);
+					flex-direction: column;
 				}
 
 				p {
