Centre the header on large screens

--- a/app/styles/components/header.scss
+++ b/app/styles/components/header.scss
@@ -20,6 +20,11 @@ header {
 			padding-top:14px;
 		}
 
+		@include media(min-width-1301) {
+			width: auto;
+			max-width: 1370px;
+		}
+
 		> div {
 
 			height:30px;
