--- a/app/components/header/index.hbs
+++ b/app/components/header/index.hbs
@@ -1,6 +1,6 @@
-<header route={{route-name}}>
+<header>
 
-	<content route={{route-name}}>
+	<content>
 
 		<div>
 			<LinkTo @route="index" class="logo"></LinkTo>
