--- a/app/styles/links.scss
+++ b/app/styles/links.scss
@@ -10,7 +10,7 @@ a {
 		color:var(--hover-color);
 	}
 
-	&:focus {
+	&:focus-visible {
 		outline: 2px solid #ea20e3 ; /* for non-webkit browsers */
 		outline: 5px auto #ea20e3 -webkit-focus-ring-color;
 	}
