add type specification in define field

--- a/app/templates/docs/surrealql/statements/define/field.hbs
+++ b/app/templates/docs/surrealql/statements/define/field.hbs
@@ -35,6 +35,7 @@
 	<Code @name="docs/surrealql/statements/define/field/name-field.surql" />
 
 	<h4>Defining data types</h4>
+	<p> When specifying data types for fields, you can use any of the <LinkTo @route="docs.surrealql.datamodel.overview">avaliable data types </LinkTo> supported in the data model. See some examples below. </p>
 	<h5>Simple data types</h5>
 	<Code @name="docs/surrealql/statements/define/field/type-field.surql" />
 
