New code and images changes to light mode

--- a/app/styles/code.scss
+++ b/app/styles/code.scss
@@ -208,11 +208,13 @@ code.language-surql {
 code.language-shell, code.language-bash {
 	.token.prompt { color:#636a75; }
 	.token.command { color:#ff009e; }
+	.token.operator { color:#ffffff; }
 	.token.parameter.variable { color:#ffffff; }
 
 	@media (prefers-color-scheme: light) {
 		.token.prompt { color:#636a75; }
 		.token.command { color:#ff009e; }
+		.token.operator { color:#000000; }
 		.token.parameter.variable { color:#000000; }
 	}
 }
@@ -225,17 +227,31 @@ code.language-rust {
 	}
 }
 
+code.language-ts {
+	.token.operator { color:#ffffff; }
+	.token.punctuation { color:#ffffff; }
+
+	@media (prefers-color-scheme: light) {
+		.token.operator { color:#000000; }
+		.token.punctuation { color:#000000; }
+	}
+}
+
 code.language-javascript {
 	.token.string { color:#00ff6e; }
 	.token.function { color:#ff9b67; }
 	.token.constant { color:#ff009e; }
 	.token.keyword { color:#ff009e; }
+	.token.operator { color:#ffffff; }
+	.token.punctuation { color:#ffffff; }
 
 	@media (prefers-color-scheme: light) {
 		.token.string { color:#68DE74; }
 		.token.function { color:#ff9b67; }
 		.token.constant { color:#ff009e; }
 		.token.keyword { color:#ff009e; }
+		.token.operator { color:#000000; }
+		.token.punctuation { color:#000000; }
 	}
 }
 
