--- a/app/styles/components/layout/text.scss
+++ b/app/styles/components/layout/text.scss
@@ -49,7 +49,7 @@ layout-text {
 			}
 
 			@include media(min-width-1449) {
-				font-size: 100px;
+				font-size: 117px;
 			}
 		
 		}
@@ -60,6 +60,10 @@ layout-text {
 			
 			@include media(max-width-960) {
 				font-size:24px;
+			}
+
+			@include media(min-width-1449) {
+				font-size: 45px;
 			}
 		
 		}
