Code and image updates to light mode

--- a/app/components/devicon/index.hbs
+++ b/app/components/devicon/index.hbs
@@ -1,39 +1,39 @@
 {{#if (eq @type "none")}}
-{{else if (eq @type "amazon")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/amazon.png" />
-{{else if (eq @type "angular")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/angular.png" />
-{{else if (eq @type "apple")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/apple.png" />
-{{else if (eq @type "c")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/c.png" />
-{{else if (eq @type "dart")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dart.png" />
-{{else if (eq @type "deno")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/deno.png" />
-{{else if (eq @type "digitalocean")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/digitalocean.png" />
-{{else if (eq @type "docker")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/docker.png" />
-{{else if (eq @type "docker")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/docker.png" />
-{{else if (eq @type "dotnet")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dotnet.png" />
-{{else if (eq @type "emberjs")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/emberjs.png" />
-{{else if (eq @type "erlang")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/erlang.png" />
-{{else if (eq @type "flutter")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/flutter.png" />
-{{else if (eq @type "fly")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/fly.png" />
-{{else if (eq @type "golang")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/golang.png" />
-{{else if (eq @type "google")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/google.png" />
-{{else if (eq @type "heroku")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/heroku.png" />
-{{else if (eq @type "java")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/java.png" />
-{{else if (eq @type "javascript")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/javascript.png" />
-{{else if (eq @type "kubernetes")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/kubernetes.png" />
-{{else if (eq @type "linux")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/linux.png" />
-{{else if (eq @type "nestjs")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/nestjs.png" />
-{{else if (eq @type "nextjs")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/nextjs.png" />
-{{else if (eq @type "nodejs")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/nodejs.png" />
-{{else if (eq @type "nuxtjs")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/nuxtjs.png" />
-{{else if (eq @type "php")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/php.png" />
-{{else if (eq @type "python")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/python.png" />
-{{else if (eq @type "r")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/r.png" />
-{{else if (eq @type "reactjs")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/reactjs.png" />
-{{else if (eq @type "ruby")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/ruby.png" />
-{{else if (eq @type "rust")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/rust.png" />
-{{else if (eq @type "surreal")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/surreal.png" />
-{{else if (eq @type "svelte")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/svelte.png" />
-{{else if (eq @type "swift")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/swift.png" />
-{{else if (eq @type "vuejs")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/vuejs.png" />
-{{else if (eq @type "webassembly")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/webassembly.png" />
-{{else if (eq @type "windows")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/windows.png" />
+{{else if (eq @type "amazon")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/amazon.png" />
+{{else if (eq @type "angular")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/angular.png" />
+{{else if (eq @type "apple")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/apple.png" />
+{{else if (eq @type "c")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/c.png" />
+{{else if (eq @type "dart")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/dart.png" />
+{{else if (eq @type "deno")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/deno.png" />
+{{else if (eq @type "digitalocean")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/digitalocean.png" />
+{{else if (eq @type "docker")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/docker.png" />
+{{else if (eq @type "docker")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/docker.png" />
+{{else if (eq @type "dotnet")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/dotnet.png" />
+{{else if (eq @type "emberjs")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/emberjs.png" />
+{{else if (eq @type "erlang")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/erlang.png" />
+{{else if (eq @type "flutter")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/flutter.png" />
+{{else if (eq @type "fly")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/fly.png" />
+{{else if (eq @type "golang")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/golang.png" />
+{{else if (eq @type "google")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/google.png" />
+{{else if (eq @type "heroku")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/heroku.png" />
+{{else if (eq @type "java")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/java.png" />
+{{else if (eq @type "javascript")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/javascript.png" />
+{{else if (eq @type "kubernetes")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/kubernetes.png" />
+{{else if (eq @type "linux")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/linux.png" />
+{{else if (eq @type "nestjs")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/nestjs.png" />
+{{else if (eq @type "nextjs")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/nextjs.png" />
+{{else if (eq @type "nodejs")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/nodejs.png" />
+{{else if (eq @type "nuxtjs")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/nuxtjs.png" />
+{{else if (eq @type "php")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/php.png" />
+{{else if (eq @type "python")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/python.png" />
+{{else if (eq @type "r")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/r.png" />
+{{else if (eq @type "reactjs")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/reactjs.png" />
+{{else if (eq @type "ruby")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/ruby.png" />
+{{else if (eq @type "rust")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/rust.png" />
+{{else if (eq @type "surreal")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/surreal.png" />
+{{else if (eq @type "svelte")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/svelte.png" />
+{{else if (eq @type "swift")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/swift.png" />
+{{else if (eq @type "vuejs")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/vuejs.png" />
+{{else if (eq @type "webassembly")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/webassembly.png" />
+{{else if (eq @type "windows")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/windows.png" />
 {{/if}}
