--- a/app/styles/components/layout/boxes.scss
+++ b/app/styles/components/layout/boxes.scss
@@ -694,7 +694,7 @@ layout-boxes {
 					>h3 {
 						font-size: 22px;
 						margin-bottom:0px;
-						color: var(--same-color);
+						color: var(--text-color);
 					}
 	
 					>h4 {
