--- a/app/components/signup/newsletter/index.hbs
+++ b/app/components/signup/newsletter/index.hbs
@@ -1,4 +1,4 @@
-<a {{on "click" (fn (mut this.show) true)}} button ...attributes>
+<a {{on "click" (fn (mut this.show) true)}} button thinner ...attributes>
 	<div>
 		{{#if (has-block)}}
 			{{yield}}
