--- a/app/styles/text.scss
+++ b/app/styles/text.scss
@@ -179,6 +179,9 @@ h4 {
 
 	&[yaacomm] {
 		width: 100%;
+		font-size: 19px;
+		font-weight: 500;
+		line-height: 1.5;
 		color: var(--faint-color);
 	}
 
