--- a/app/styles/vars.scss
+++ b/app/styles/vars.scss
@@ -35,7 +35,7 @@
 		--split-color:#6e6e73;		// Colour of border lines in split code boxes
 		--darker-color:#ffffff;	// Colour of content boxes inside content boxes
 		--border-color:#d9d9d9;	// Colour of border separation lines
-		--sidebar-color:#151517;	// Colour of mobile sidebar menu
+		--sidebar-color:#f5f5f7;	// Colour of mobile sidebar menu
 		--footer-color:#f0f0f3;	// Colour of footer
 		--same-color:#ffffff;		// Same colour from light to dark mode
 		--black-color:#000000;		// Same colour from light to dark mode
