Update light mode buttons

--- a/app/components/layout/boxes/item/index.hbs
+++ b/app/components/layout/boxes/item/index.hbs
@@ -34,9 +34,9 @@
 			{{/if}}
 
 			{{#if @buttontext}}
-				<Button::Thicker @link={{@url}}>
+				<Button::Thinner @link={{@url}}>
 					<span>{{@buttontext}}</span> <i class="fas fa-arrow-right"></i>
-				</Button::Thicker>
+				</Button::Thinner>
 			{{/if}}
 
 			{{yield}}
