--- a/app/components/devicon/index.hbs
+++ b/app/components/devicon/index.hbs
@@ -1,39 +1,39 @@
 {{#if (eq @type "none")}}
-{{else if (eq @type "amazon")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/amazon.png" />
-{{else if (eq @type "angular")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/angular.png" />
-{{else if (eq @type "apple")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/apple.png" />
-{{else if (eq @type "c")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/c.png" />
-{{else if (eq @type "dart")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/dart.png" />
-{{else if (eq @type "deno")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/deno.png" />
-{{else if (eq @type "digitalocean")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/digitalocean.png" />
-{{else if (eq @type "docker")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/docker.png" />
-{{else if (eq @type "docker")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/docker.png" />
-{{else if (eq @type "dotnet")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/dotnet.png" />
-{{else if (eq @type "emberjs")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/emberjs.png" />
-{{else if (eq @type "erlang")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/erlang.png" />
-{{else if (eq @type "flutter")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/flutter.png" />
-{{else if (eq @type "fly")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/fly.png" />
-{{else if (eq @type "golang")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/golang.png" />
-{{else if (eq @type "google")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/google.png" />
-{{else if (eq @type "heroku")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/heroku.png" />
-{{else if (eq @type "java")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/java.png" />
-{{else if (eq @type "javascript")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/javascript.png" />
-{{else if (eq @type "kubernetes")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/kubernetes.png" />
-{{else if (eq @type "linux")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/linux.png" />
-{{else if (eq @type "nestjs")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/nestjs.png" />
-{{else if (eq @type "nextjs")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/nextjs.png" />
-{{else if (eq @type "nodejs")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/nodejs.png" />
-{{else if (eq @type "nuxtjs")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/nuxtjs.png" />
-{{else if (eq @type "php")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/php.png" />
-{{else if (eq @type "python")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/python.png" />
-{{else if (eq @type "r")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/r.png" />
-{{else if (eq @type "reactjs")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/reactjs.png" />
-{{else if (eq @type "ruby")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/ruby.png" />
-{{else if (eq @type "rust")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/rust.png" />
-{{else if (eq @type "surreal")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/surreal.png" />
-{{else if (eq @type "svelte")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/svelte.png" />
-{{else if (eq @type "swift")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/swift.png" />
-{{else if (eq @type "vuejs")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/vuejs.png" />
-{{else if (eq @type "webassembly")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/webassembly.png" />
-{{else if (eq @type "windows")}}<img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/dark/windows.png" />
+{{else if (eq @type "amazon")}}<picture><source srcset="/static/img/icons/light/amazon.png" media="(prefers-color-scheme: dark)"><img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/light/amazon.png" alt=""></picture>
+{{else if (eq @type "angular")}}<picture><source srcset="/static/img/icons/light/angular.png" media="(prefers-color-scheme: dark)"><img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/light/angular.png" alt=""></picture>
+{{else if (eq @type "apple")}}<picture><source srcset="/static/img/icons/light/apple.png" media="(prefers-color-scheme: dark)"><img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/light/apple.png" alt=""></picture>
+{{else if (eq @type "c")}}<picture><source srcset="/static/img/icons/light/c.png" media="(prefers-color-scheme: dark)"><img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/light/c.png" alt=""></picture>
+{{else if (eq @type "dart")}}<picture><source srcset="/static/img/icons/light/dart.png" media="(prefers-color-scheme: dark)"><img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/light/dart.png" alt=""></picture>
+{{else if (eq @type "deno")}}<picture><source srcset="/static/img/icons/light/deno.png" media="(prefers-color-scheme: dark)"><img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/light/deno.png" alt=""></picture>
+{{else if (eq @type "digitalocean")}}<picture><source srcset="/static/img/icons/light/digitalocean.png" media="(prefers-color-scheme: dark)"><img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/light/digitalocean.png" alt=""></picture>
+{{else if (eq @type "docker")}}<picture><source srcset="/static/img/icons/light/docker.png" media="(prefers-color-scheme: dark)"><img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/light/docker.png" alt=""></picture>
+{{else if (eq @type "docker")}}<picture><source srcset="/static/img/icons/light/docker.png" media="(prefers-color-scheme: dark)"><img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/light/docker.png" alt=""></picture>
+{{else if (eq @type "dotnet")}}<picture><source srcset="/static/img/icons/light/dotnet.png" media="(prefers-color-scheme: dark)"><img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/light/dotnet.png" alt=""></picture>
+{{else if (eq @type "emberjs")}}<picture><source srcset="/static/img/icons/light/emberjs.png" media="(prefers-color-scheme: dark)"><img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/light/emberjs.png" alt=""></picture>
+{{else if (eq @type "erlang")}}<picture><source srcset="/static/img/icons/light/erlang.png" media="(prefers-color-scheme: dark)"><img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/light/erlang.png" alt=""></picture>
+{{else if (eq @type "flutter")}}<picture><source srcset="/static/img/icons/light/flutter.png" media="(prefers-color-scheme: dark)"><img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/light/flutter.png" alt=""></picture>
+{{else if (eq @type "fly")}}<picture><source srcset="/static/img/icons/light/fly.png" media="(prefers-color-scheme: dark)"><img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/light/fly.png" alt=""></picture>
+{{else if (eq @type "golang")}}<picture><source srcset="/static/img/icons/light/golang.png" media="(prefers-color-scheme: dark)"><img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/light/golang.png" alt=""></picture>
+{{else if (eq @type "google")}}<picture><source srcset="/static/img/icons/light/google.png" media="(prefers-color-scheme: dark)"><img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/light/google.png" alt=""></picture>
+{{else if (eq @type "heroku")}}<picture><source srcset="/static/img/icons/light/heroku.png" media="(prefers-color-scheme: dark)"><img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/light/heroku.png" alt=""></picture>
+{{else if (eq @type "java")}}<picture><source srcset="/static/img/icons/light/java.png" media="(prefers-color-scheme: dark)"><img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/light/java.png" alt=""></picture>
+{{else if (eq @type "javascript")}}<picture><source srcset="/static/img/icons/light/javascript.png" media="(prefers-color-scheme: dark)"><img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/light/javascript.png" alt=""></picture>
+{{else if (eq @type "kubernetes")}}<picture><source srcset="/static/img/icons/light/kubernetes.png" media="(prefers-color-scheme: dark)"><img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/light/kubernetes.png" alt=""></picture>
+{{else if (eq @type "linux")}}<picture><source srcset="/static/img/icons/light/linux.png" media="(prefers-color-scheme: dark)"><img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/light/linux.png" alt=""></picture>
+{{else if (eq @type "nestjs")}}<picture><source srcset="/static/img/icons/light/nestjs.png" media="(prefers-color-scheme: dark)"><img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/light/nestjs.png" alt=""></picture>
+{{else if (eq @type "nextjs")}}<picture><source srcset="/static/img/icons/light/nextjs.png" media="(prefers-color-scheme: dark)"><img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/light/nextjs.png" alt=""></picture>
+{{else if (eq @type "nodejs")}}<picture><source srcset="/static/img/icons/light/nodejs.png" media="(prefers-color-scheme: dark)"><img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/light/nodejs.png" alt=""></picture>
+{{else if (eq @type "nuxtjs")}}<picture><source srcset="/static/img/icons/light/nuxtjs.png" media="(prefers-color-scheme: dark)"><img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/light/nuxtjs.png" alt=""></picture>
+{{else if (eq @type "php")}}<picture><source srcset="/static/img/icons/light/php.png" media="(prefers-color-scheme: dark)"><img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/light/php.png" alt=""></picture>
+{{else if (eq @type "python")}}<picture><source srcset="/static/img/icons/light/python.png" media="(prefers-color-scheme: dark)"><img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/light/python.png" alt=""></picture>
+{{else if (eq @type "r")}}<picture><source srcset="/static/img/icons/light/r.png" media="(prefers-color-scheme: dark)"><img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/light/r.png" alt=""></picture>
+{{else if (eq @type "reactjs")}}<picture><source srcset="/static/img/icons/light/reactjs.png" media="(prefers-color-scheme: dark)"><img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/light/reactjs.png" alt=""></picture>
+{{else if (eq @type "ruby")}}<picture><source srcset="/static/img/icons/light/ruby.png" media="(prefers-color-scheme: dark)"><img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/light/ruby.png" alt=""></picture>
+{{else if (eq @type "rust")}}<picture><source srcset="/static/img/icons/light/rust.png" media="(prefers-color-scheme: dark)"><img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/light/rust.png" alt=""></picture>
+{{else if (eq @type "surreal")}}<picture><source srcset="/static/img/icons/light/surreal.png" media="(prefers-color-scheme: dark)"><img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/light/surreal.png" alt=""></picture>
+{{else if (eq @type "svelte")}}<picture><source srcset="/static/img/icons/light/svelte.png" media="(prefers-color-scheme: dark)"><img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/light/svelte.png" alt=""></picture>
+{{else if (eq @type "swift")}}<picture><source srcset="/static/img/icons/light/swift.png" media="(prefers-color-scheme: dark)"><img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/light/swift.png" alt=""></picture>
+{{else if (eq @type "vuejs")}}<picture><source srcset="/static/img/icons/light/vuejs.png" media="(prefers-color-scheme: dark)"><img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/light/vuejs.png" alt=""></picture>
+{{else if (eq @type "webassembly")}}<picture><source srcset="/static/img/icons/light/webassembly.png" media="(prefers-color-scheme: dark)"><img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/light/webassembly.png" alt=""></picture>
+{{else if (eq @type "windows")}}<picture><source srcset="/static/img/icons/light/windows.png" media="(prefers-color-scheme: dark)"><img class="devicon" width="{{@size}}" height="{{@size}}" src="/static/img/icons/light/windows.png" alt=""></picture>
 {{/if}}
